# four-Color-Theorem-Prover

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.Docker.md  README.md  ThingsLearned.MD  compose.yaml  output.txt  vcpkg.json
.claude/: launch.json
src/: AtomicEnclosure.cpp  AtomicEnclosure.h  Edge.cpp  Edge.h  Path.cpp  Path.h  Point.cpp  Point.h  buttonControls.cpp  buttonControls.h  colorLogic.cpp  colorLogic.h  lineAndPointLogic.cpp  lineAndPointLogic.h  main.cpp  mapColoring.cpp  mapColoring.h  triangulation.cpp  triangulation.h
visuals/: planar-face-tracing.html
